# sipgof

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.py
qualityMeasure/: __init__.py  adaptiveProcedureReader.py  multiStateListener.py  multiStateListenerModelCollection.py  multiStateListener_v0.py
qualityMeasure/examples/: LoadOMATestAndFit.py  LoadOMATestAndFitCustomModel.py  LoadOMATestAndFitSingleState.py
qualityMeasure/examples/exampleData/: exampleOmaTestResult0.xml  exampleOmaTestResult1.xml  exampleOmaTestResult2.xml
